<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.hillforts.activities.HillfortActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/hillfortTitle"
                android:layout_width="380dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:hint="@string/hint_hillfortTitle"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/hillfortDescription"
                android:layout_width="380dp"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:hint="@string/hint_hillfortDescription"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hillfortTitle" />

            <CheckBox
                android:id="@+id/visitedHillfort"
                android:layout_width="380dp"
                android:layout_height="45dp"
                android:layout_marginTop="220dp"
                android:gravity="center_horizontal"
                android:text="@string/hillfort_visited"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/hillfortDescription"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/hillfortDescription"
                app:layout_constraintTop_toBottomOf="@+id/hillfortDescription" />

            <Button
                android:id="@+id/chooseImage1"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage1"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/hillfortImage1"
                app:layout_constraintStart_toStartOf="@+id/hillfortImage1"
                app:layout_constraintTop_toBottomOf="@+id/hillfortImage1" />

            <ImageView
                android:id="@+id/hillfortImage1"
                android:layout_width="155dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/hillfortDescription"
                app:layout_constraintTop_toBottomOf="@+id/hillfortDescription"
                app:srcCompat="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/chooseImage2"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/button_addImage2"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/hillfortImage2"
                app:layout_constraintStart_toStartOf="@+id/hillfortImage2"
                app:layout_constraintTop_toBottomOf="@+id/hillfortImage2" />

            <ImageView
                android:id="@+id/hillfortImage2"
                android:layout_width="155dp"
                android:layout_height="150dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/hillfortDescription"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/hillfortImage1"
                app:layout_constraintTop_toBottomOf="@+id/hillfortDescription"
                app:srcCompat="@mipmap/ic_launcher" />

            <Button
                android:id="@+id/hillfortLocation"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorAccent"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:stateListAnimator="@null"
                android:text="@string/button_location"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/hillfortImage2"
                app:layout_constraintStart_toStartOf="@+id/hillfortImage1"
                app:layout_constraintTop_toBottomOf="@+id/visitedHillfort" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/hillfortLocation"
                app:layout_constraintStart_toStartOf="@+id/hillfortLocation"
                app:layout_constraintTop_toBottomOf="@+id/hillfortLocation" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>